# playvideo-opengl

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: NativeMedia.h
app/src/main/java/com/example/jarry/playvideo_texuture/: TextureViewMediaActivity.java
